// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Progress component > renders with custom className > expected html 1`] = `
<div>
  <p
    class="mb-2"
    id="progress-label"
  >
    test 0%
  </p>
  <div
    aria-labelledby="progress-label"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="0"
    aria-valuetext="0%"
    class="relative w-full overflow-hidden rounded-full bg-gray-200 h-2.5 custom-class"
    data-max="100"
    data-state="loading"
    data-testid="progress-root"
    data-value="0"
    role="progressbar"
  >
    <div
      class="h-full w-full flex-1 transition-all bg-gray-600"
      data-max="100"
      data-state="loading"
      data-value="0"
      style="transform: translateX(-100%);"
    />
  </div>
</div>
`;

exports[`Progress component > renders with custom size and variant > expected html 1`] = `
<div>
  <p
    class="mb-2"
    id="progress-label"
  >
    test 0%
  </p>
  <div
    aria-labelledby="progress-label"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="0"
    aria-valuetext="0%"
    class="relative w-full overflow-hidden rounded-full bg-gray-200 h-4"
    data-max="100"
    data-state="loading"
    data-testid="progress-root"
    data-value="0"
    role="progressbar"
  >
    <div
      class="h-full w-full flex-1 transition-all bg-blue-600"
      data-max="100"
      data-state="loading"
      data-value="0"
      style="transform: translateX(-100%);"
    />
  </div>
</div>
`;

exports[`Progress component > renders with custom value > expected html 1`] = `
<div>
  <p
    class="mb-2"
    id="progress-label"
  >
    test 50%
  </p>
  <div
    aria-labelledby="progress-label"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    aria-valuetext="50%"
    class="relative w-full overflow-hidden rounded-full bg-gray-200 h-2.5"
    data-max="100"
    data-state="loading"
    data-testid="progress-root"
    data-value="50"
    role="progressbar"
  >
    <div
      class="h-full w-full flex-1 transition-all bg-gray-600"
      data-max="100"
      data-state="loading"
      data-value="50"
      style="transform: translateX(-50%);"
    />
  </div>
</div>
`;

exports[`Progress component > renders with default props > expected html 1`] = `
<div>
  <p
    class="mb-2"
    id="progress-label"
  >
    test 0%
  </p>
  <div
    aria-labelledby="progress-label"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="0"
    aria-valuetext="0%"
    class="relative w-full overflow-hidden rounded-full bg-gray-200 h-2.5"
    data-max="100"
    data-state="loading"
    data-testid="progress-root"
    data-value="0"
    role="progressbar"
  >
    <div
      class="h-full w-full flex-1 transition-all bg-gray-600"
      data-max="100"
      data-state="loading"
      data-value="0"
      style="transform: translateX(-100%);"
    />
  </div>
</div>
`;
